--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -2,10 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6a6e5e48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir('..')\n",
+    "\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
@@ -13,82 +30,129 @@
     "import logging\n",
     "\n",
     "logging.basicConfig(level=logging.INFO)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81a1f462",
    "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3e24ee7fd664b385",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "engine = create_engine(\n",
-    "    \"postgresql://readonly_role:>sU9y95R(e4m@ep-young-breeze-a5cq8xns.us-east-2.aws.neon.tech/netflix\"\n",
+    "    \"postgresql://readonly_role:>sU9y95R(e4m@ep-young-breeze-a5cq8xns.us-east-2.aws.neon.tech/netflix?options=endpoint%3Dep-young-breeze-a5cq8xns&sslmode=require\"\n",
     ")"
-   ],
-   "id": "3e24ee7fd664b385",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "pd.read_sql(\"SELECT * FROM netflix_shows WHERE country = 'Germany'\", engine)",
+   "execution_count": null,
    "id": "b97cc6be4fcb5343",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "pd.read_sql(\"SELECT * FROM netflix_shows WHERE country = 'Germany'\", engine)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3176fa3c84d8997f",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "session = portus.create_session(\"gpt-4o-mini\")\n",
     "session.add_db(engine)"
-   ],
-   "id": "3176fa3c84d8997f",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d92ee0ef5e4a172f",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "data = {\n",
     "    \"show_id\": [\"s706\", \"s1032\", \"s1253\"],\n",
     "    \"cancelled\": [True, True, False]\n",
     "}\n",
     "df = pd.DataFrame(data)\n",
-    "session.add_df(df)"
-   ],
-   "id": "d92ee0ef5e4a172f",
-   "outputs": [],
-   "execution_count": null
+    "df"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "session.ask(\"list directors of cancelled shows\").df()",
-   "id": "749ad13462f80afb",
+   "execution_count": null,
+   "id": "346313ac",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "\n",
+    "session.add_df(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "749ad13462f80afb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session.ask(\"list directors of cancelled shows\").df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4911f516",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = session.ask(\"How did you deduce the show was cancelled?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35d2d08c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcd4e2ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
