Fixed multi-step ask

--- a/test.ipynb
+++ b/test.ipynb
@@ -40,8 +40,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-30T07:55:40.990741Z",
-     "start_time": "2025-09-30T07:55:19.241418Z"
+     "end_time": "2025-09-30T10:09:23.541191Z",
+     "start_time": "2025-09-30T10:09:08.688663Z"
     }
    },
    "cell_type": "code",
@@ -62,11 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Definitions and approach:\n",
-      "- Overall revenue: total sales amount across all time in the system.\n",
-      "- Revenue per order is computed as quantity * price, where price is per unit.\n",
-      "Method: Summed quantity * price across all rows in sampledb.public.orders. Used COALESCE to return 0.00 if there are no orders.\n",
-      "Result: The total (overall) revenue is 2023.94.\n"
+      "Definitions: Overall revenue = sum of all order line revenues across all time, where line revenue = quantity * price for each row in sampledb.public.orders. Null quantities or prices are treated as 0. Steps: Queried the orders table and calculated SUM(quantity * price), rounded to 2 decimals. Result: The overall revenue is 2023.94.\n"
      ]
     }
    ],
@@ -75,8 +71,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-30T07:55:41.003202Z",
-     "start_time": "2025-09-30T07:55:40.996630Z"
+     "end_time": "2025-09-30T10:09:23.553747Z",
+     "start_time": "2025-09-30T10:09:23.547830Z"
     }
    },
    "cell_type": "code",
@@ -131,8 +127,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-30T07:55:41.040084Z",
-     "start_time": "2025-09-30T07:55:41.037998Z"
+     "end_time": "2025-09-30T10:09:23.596737Z",
+     "start_time": "2025-09-30T10:09:23.594680Z"
     }
    },
    "cell_type": "code",
@@ -142,7 +138,7 @@
     {
      "data": {
       "text/plain": [
-       "'SELECT COALESCE(CAST(SUM(quantity * price) AS DECIMAL(18,2)), CAST(0 AS DECIMAL(18,2))) AS overall_revenue\\nFROM sampledb.public.orders;'"
+       "'SELECT COALESCE(ROUND(SUM(COALESCE(quantity, 0) * COALESCE(price, 0)), 2), 0) AS overall_revenue\\nFROM sampledb.public.orders;'"
       ]
      },
      "execution_count": 3,
@@ -151,6 +147,54 @@
     }
    ],
    "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-30T10:09:33.682588Z",
+     "start_time": "2025-09-30T10:09:23.628774Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "pipe.ask(\"Is revenue more then 10k?\").text",
+   "id": "524e34d40a585bb3",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Definitions: Revenue = total amount from all orders, calculated as sum(quantity * price) across sampledb.public.orders. Steps: Computed overall revenue and compared it to 10,000. Result: Overall revenue is 2,023.94, which is not more than 10,000.'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-30T10:10:26.473365Z",
+     "start_time": "2025-09-30T10:10:26.469924Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "pipe.messages[1]",
+   "id": "ec0103f84694387c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HumanMessage(content='What is overall revenue?', additional_kwargs={}, response_metadata={}, id='45f22e63-cf49-457c-aac7-9765241f72c1')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
   }
  ],
  "metadata": {
