Fix linter and type checking errors.
Had to change the duck db agent.

--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -1,112 +1,110 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": [
-    "import os\n",
-    "os.chdir('..')\n",
-    "\n",
-    "\n",
-    "from dotenv import load_dotenv\n",
-    "load_dotenv()"
-   ],
-   "id": "f045f815d087345c"
-  },
-  {
+   "id": "f045f815d087345c",
    "metadata": {},
-   "cell_type": "code",
    "outputs": [],
-   "execution_count": null,
    "source": [
-    "import pandas as pd\n",
-    "from sqlalchemy import create_engine\n",
-    "import portus\n",
     "import logging\n",
+    "import os\n",
     "\n",
+    "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "import portus\n",
+    "\n",
+    "os.chdir(\"..\")\n",
+    "load_dotenv()\n",
     "logging.basicConfig(level=logging.INFO)"
-   ],
-   "id": "8163416e8472fa94"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "aa8317dab0d9196",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "engine = create_engine(\n",
     "    \"postgresql://readonly_role:>sU9y95R(e4m@ep-young-breeze-a5cq8xns.us-east-2.aws.neon.tech/netflix?options=endpoint%3Dep-young-breeze-a5cq8xns&sslmode=require\"\n",
     ")"
-   ],
-   "id": "aa8317dab0d9196"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "pd.read_sql(\"SELECT * FROM netflix_shows WHERE country = 'Germany'\", engine)",
-   "id": "bae6cfd0e57c3ff1"
+   "id": "bae6cfd0e57c3ff1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_sql(\"SELECT * FROM netflix_shows WHERE country = 'Germany'\", engine)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "e2d4e9d3ba11eb0d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "session = portus.open_session(\"my_session\")\n",
     "session.add_db(engine)"
-   ],
-   "id": "e2d4e9d3ba11eb0d"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "c2b3ac274b06f60",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "data = {\n",
-    "    \"show_id\": [\"s706\", \"s1032\", \"s1253\"],\n",
-    "    \"cancelled\": [True, True, False]\n",
-    "}\n",
+    "data = {\"show_id\": [\"s706\", \"s1032\", \"s1253\"], \"cancelled\": [True, True, False]}\n",
     "df = pd.DataFrame(data)\n",
     "df"
-   ],
-   "id": "c2b3ac274b06f60"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "session.add_df(df)",
-   "id": "ba734e6562fc27bc"
+   "id": "ba734e6562fc27bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session.add_df(df)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "session.ask(\"list directors of cancelled shows\").df()",
-   "id": "aa772a2573916849"
+   "id": "aa772a2573916849",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session.ask(\"list directors of cancelled shows\").df()"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "result = session.ask(\"How did you deduce the show was cancelled?\")",
-   "id": "55a3e8badd9b10d4"
+   "id": "55a3e8badd9b10d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = session.ask(\"How did you deduce the show was cancelled?\")"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "str(result)",
-   "id": "2b9e6b48664e6272"
+   "id": "2b9e6b48664e6272",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str(result)"
+   ]
   }
  ],
  "metadata": {},
