--- a/examples/test.ipynb
+++ b/examples/test.ipynb
@@ -1,61 +1,65 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4444d40e40087e38",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlalchemy as sa\n",
+    "\n",
+    "import portus"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "source": "## DataFrame",
-   "id": "ad0cbe773e329e5a"
+   "id": "ad0cbe773e329e5a",
+   "metadata": {},
+   "source": "## DataFrame"
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
-    "import portus\n",
     "s = portus.open_session(\"a\")\n",
-    "import pandas as pd\n",
-    "s.add_df(pd.DataFrame({\"k\": [\"re\", \"tr\", \"yt\"], \"num\": [1,2,3]}))\n",
+    "s.add_df(pd.DataFrame({\"k\": [\"re\", \"tr\", \"yt\"], \"num\": [1, 2, 3]}))\n",
     "pipe = s.ask(\"What is sum of all values?\")\n",
     "print(pipe.text)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "pipe.df",
+   "execution_count": null,
    "id": "78ae0df6228b558e",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
    "metadata": {},
-   "cell_type": "markdown",
-   "source": "## Database",
-   "id": "5d6d76e1f34bafd7"
+   "outputs": [],
+   "source": [
+    "pipe.df"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d6d76e1f34bafd7",
+   "metadata": {},
+   "source": "## Database"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "fed9e13f237d703c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-09-30T10:30:00.860006Z",
      "start_time": "2025-09-30T10:29:52.013507Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "import portus\n",
-    "s = portus.open_session(\"a\")\n",
-    "import sqlalchemy as sa\n",
-    "url = \"postgresql://Konstantin.Barzilovich@localhost:5432/sampledb\"\n",
-    "engine = sa.create_engine(url, pool_pre_ping=True)\n",
-    "s.add_db(engine, name=\"sampledb\")\n",
-    "pipe = s.ask(\"What is overall revenue?\")\n",
-    "print(pipe.text)"
-   ],
-   "id": "fed9e13f237d703c",
    "outputs": [
     {
      "name": "stdout",
@@ -74,28 +78,29 @@
      ]
     }
    ],
-   "execution_count": 1
+   "source": [
+    "s = portus.open_session(\"a\")\n",
+    "\n",
+    "url = \"postgresql://Konstantin.Barzilovich@localhost:5432/sampledb\"\n",
+    "engine = sa.create_engine(url, pool_pre_ping=True)\n",
+    "s.add_db(engine, name=\"sampledb\")\n",
+    "pipe = s.ask(\"What is overall revenue?\")\n",
+    "print(pipe.text)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c9cb378d25f3c6f6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-09-30T10:30:10.949561Z",
      "start_time": "2025-09-30T10:30:10.943016Z"
     }
    },
-   "cell_type": "code",
-   "source": "pipe.df",
-   "id": "c9cb378d25f3c6f6",
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "   total_revenue  total_orders           first_order_date  \\\n",
-       "0        2023.94             7 2025-09-29 18:08:52.407760   \n",
-       "\n",
-       "             last_order_date  \n",
-       "0 2025-09-29 18:08:52.407760  "
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -132,6 +137,13 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "   total_revenue  total_orders           first_order_date  \\\n",
+       "0        2023.94             7 2025-09-29 18:08:52.407760   \n",
+       "\n",
+       "             last_order_date  \n",
+       "0 2025-09-29 18:08:52.407760  "
       ]
      },
      "execution_count": 2,
@@ -139,18 +151,20 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "source": [
+    "pipe.df"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "392600a84fcb462f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-09-30T10:30:17.441708Z",
      "start_time": "2025-09-30T10:30:17.439311Z"
     }
    },
-   "cell_type": "code",
-   "source": "pipe.sql",
-   "id": "392600a84fcb462f",
    "outputs": [
     {
      "data": {
@@ -163,18 +177,20 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "source": [
+    "pipe.sql"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "524e34d40a585bb3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-09-30T10:30:26.589923Z",
      "start_time": "2025-09-30T10:30:22.826500Z"
     }
    },
-   "cell_type": "code",
-   "source": "pipe.ask(\"Is revenue more then 10k?\").text",
-   "id": "524e34d40a585bb3",
    "outputs": [
     {
      "data": {
@@ -187,18 +203,20 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "source": [
+    "pipe.ask(\"Is revenue more then 10k?\").text"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ec0103f84694387c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-09-30T10:10:26.473365Z",
      "start_time": "2025-09-30T10:10:26.469924Z"
     }
    },
-   "cell_type": "code",
-   "source": "pipe.messages[1]",
-   "id": "ec0103f84694387c",
    "outputs": [
     {
      "data": {
@@ -211,7 +229,9 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "source": [
+    "pipe.messages[1]"
+   ]
   }
  ],
  "metadata": {
