--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -2,112 +2,110 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "f045f815d087345c",
    "metadata": {},
-   "outputs": [],
    "source": [
     "import logging\n",
-    "import os\n",
-    "\n",
     "import pandas as pd\n",
+    "import portus\n",
     "from dotenv import load_dotenv\n",
     "from sqlalchemy import create_engine\n",
     "\n",
-    "import portus\n",
-    "\n",
-    "os.chdir(\"..\")\n",
-    "load_dotenv()\n",
+    "load_dotenv(\"../.env\")\n",
     "logging.basicConfig(level=logging.INFO)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "aa8317dab0d9196",
    "metadata": {},
-   "outputs": [],
    "source": [
     "engine = create_engine(\n",
     "    \"postgresql://readonly_role:>sU9y95R(e4m@ep-young-breeze-a5cq8xns.us-east-2.aws.neon.tech/netflix?options=endpoint%3Dep-young-breeze-a5cq8xns&sslmode=require\"\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "bae6cfd0e57c3ff1",
    "metadata": {},
-   "outputs": [],
    "source": [
     "pd.read_sql(\"SELECT * FROM netflix_shows WHERE country = 'Germany'\", engine)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "e2d4e9d3ba11eb0d",
    "metadata": {},
-   "outputs": [],
    "source": [
     "session = portus.open_session(\"my_session\")\n",
     "session.add_db(engine)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "c2b3ac274b06f60",
    "metadata": {},
-   "outputs": [],
    "source": [
     "data = {\"show_id\": [\"s706\", \"s1032\", \"s1253\"], \"cancelled\": [True, True, False]}\n",
     "df = pd.DataFrame(data)\n",
     "df"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "ba734e6562fc27bc",
    "metadata": {},
-   "outputs": [],
    "source": [
     "session.add_df(df)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "aa772a2573916849",
    "metadata": {},
+   "source": "session.ask(\"list directors of cancelled shows\").df",
    "outputs": [],
-   "source": [
-    "session.ask(\"list directors of cancelled shows\").df()"
-   ]
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "55a3e8badd9b10d4",
    "metadata": {},
-   "outputs": [],
    "source": [
     "result = session.ask(\"How did you deduce the show was cancelled?\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "2b9e6b48664e6272",
    "metadata": {},
+   "source": "print(result.text)",
    "outputs": [],
-   "source": [
-    "str(result)"
-   ]
+   "execution_count": null
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "name": "python3",
+   "language": "python",
+   "display_name": "Python 3 (ipykernel)"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
