Fix EDA notebook

--- a/examples/web_shop_orders/web_shop_orders_databao_reporting_demo.ipynb
+++ b/examples/web_shop_orders/web_shop_orders_databao_reporting_demo.ipynb
@@ -4,7 +4,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# Web Shop Orders — Databao Reporting Demo\n",
+    "# Web Shop Orders — Databao Reporting Demo (Case 2)\n",
     "\n",
     "This notebook demonstrates full EDA process using Databao\n",
     "\n",
@@ -22,7 +22,7 @@
    "execution_count": null,
    "source": [
     "# Quick installs (safe to re-run)\n",
-    "!pip install -q duckdb databao matplotlib pandas\n"
+    "!pip install -q duckdb databao matplotlib pandas"
    ],
    "id": "ee962eade8fc4c9a"
   },
@@ -42,7 +42,7 @@
     "# Set up the database connection (read-only)\n",
     "DB_PATH = \"data/web_shop.duckdb\"\n",
     "conn = duckdb.connect(DB_PATH, read_only=True)\n",
-    "print(f\"Connected to DuckDB database: {DB_PATH}\")\n"
+    "print(f\"Connected to DuckDB database: {DB_PATH}\")"
    ],
    "id": "5507ed170a4731d7"
   },
@@ -54,7 +54,7 @@
    "source": [
     "# Databao imports\n",
     "import databao\n",
-    "from databao import LLMConfig\n"
+    "from databao import LLMConfig"
    ],
    "id": "b2e3347e7cb776eb"
   },
@@ -118,9 +118,9 @@
    "execution_count": null,
    "source": [
     "session = databao.open_session(name=\"reporting-demo\", llm_config=llm_config)\n",
-    "session.add_db(conn, context='dbt/target/manifest.json')\n",
+    "session.add_db(conn)\n",
     "\n",
-    "thread = session.thread()\n"
+    "thread = session.thread()"
    ],
    "id": "90f04b469709c68"
   },
@@ -164,8 +164,7 @@
     "      - average delivery days\n",
     "      - average review score (satisfaction proxy)\n",
     "    \"\"\"\n",
-    ")\n",
-    "df_kpis = thread.df()"
+    ")"
    ],
    "id": "60f2a56e97a88dfa"
   },
@@ -174,7 +173,10 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "df_kpis",
+   "source": [
+    "df_kpis = thread.df()\n",
+    "df_kpis"
+   ],
    "id": "edc32fb18f43f39a"
   },
   {
@@ -182,7 +184,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "print(\"SQL for KPI overview:\\n\", thread.code())\n",
+   "source": "print(\"SQL for KPI overview:\\n\", thread.code())",
    "id": "d30fbfe52a1f21ed"
   },
   {
@@ -209,9 +211,7 @@
     "      - average_review_score\n",
     "    Include 2-month moving averages.\n",
     "    \"\"\"\n",
-    ")\n",
-    "df_trend = thread.df()\n",
-    "\n"
+    ")"
    ],
    "id": "d02be7cff4a29bae"
   },
@@ -220,7 +220,10 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "df_trend",
+   "source": [
+    "df_trend = thread.df()\n",
+    "df_trend"
+   ],
    "id": "242e9914d90ab059"
   },
   {
@@ -228,7 +231,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "thread.plot('Draw a line chart for Revenue')\n",
+   "source": "thread.plot('Draw a line chart for Revenue')",
    "id": "67874436824de67e"
   },
   {
@@ -236,7 +239,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "print(\"SQL for Trend & Seasonality:\\n\", thread.code())\n",
+   "source": "print(\"SQL for Trend & Seasonality:\\n\", thread.code())",
    "id": "d884fda50a7ff312"
   },
   {
@@ -265,8 +268,7 @@
     "    - Compute AOV and avg_review_score for each group.\n",
     "    Return summary DataFrames and produce grouped bar chart.\n",
     "    \"\"\"\n",
-    ")\n",
-    "df_payment = thread.df()"
+    ")"
    ],
    "id": "ff365da353d9ca5"
   },
@@ -275,7 +277,10 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "df_payment",
+   "source": [
+    "df_payment = thread.df()\n",
+    "df_payment"
+   ],
    "id": "2c82efc8682e05e5"
   },
   {
@@ -283,7 +288,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "thread.plot()\n",
+   "source": "thread.plot()",
    "id": "3ef8312677300c45"
   },
   {
@@ -291,7 +296,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "print(\"SQL for Payment & Fulfillment:\\n\", thread.code())\n",
+   "source": "print(\"SQL for Payment & Fulfillment:\\n\", thread.code())",
    "id": "4f8094298106d8a2"
   },
   {
@@ -320,8 +325,7 @@
     "      - For each group, compute orders_count, avg_total_freight_per_order, cancellation_rate.\n",
     "      - Provide bar chart illustrating differences.\n",
     "    \"\"\"\n",
-    ")\n",
-    "df_basket = thread.df()\n"
+    ")"
    ],
    "id": "7451ef2a76848adb"
   },
@@ -330,7 +334,10 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "df_basket",
+   "source": [
+    "df_basket = thread.df()\n",
+    "df_basket"
+   ],
    "id": "6f64cc85def76188"
   },
   {
@@ -338,7 +345,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "thread.plot()\n",
+   "source": "thread.plot()",
    "id": "6e63216b43cea611"
   },
   {
@@ -346,7 +353,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "print(\"SQL for Basket Analysis:\\n\", thread.code())\n",
+   "source": "print(\"SQL for Basket Analysis:\\n\", thread.code())",
    "id": "b64d80790656b5dd"
   },
   {
@@ -373,8 +380,7 @@
     "      - cohort_size\n",
     "      - months_since_cohort_start\n",
     "    \"\"\"\n",
-    ")\n",
-    "df_cohort = thread.df()\n"
+    ")"
    ],
    "id": "59d4c1897ae2a9c6"
   },
@@ -383,7 +389,10 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "df_cohort",
+   "source": [
+    "df_cohort = thread.df()\n",
+    "df_cohort"
+   ],
    "id": "16443626d82fb74b"
   },
   {
@@ -391,7 +400,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "thread.plot('line chart of cumulative LTV per cohort age per cohort (separate cohorts in different colors)')\n",
+   "source": "thread.plot('line chart of cumulative LTV per cohort age per cohort (separate cohorts in different colors)')",
    "id": "2ac80849a26cae"
   },
   {
@@ -399,7 +408,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "print(\"SQL for Cohort Analysis:\\n\", thread.code())\n",
+   "source": "print(\"SQL for Cohort Analysis:\\n\", thread.code())",
    "id": "ca92b7c68052661f"
   },
   {
@@ -422,8 +431,7 @@
     "    For seller_state → customer_state lanes with at least 20 delivered orders:\n",
     "      - Compute avg_delivery_days, median_delivery_days, orders_count.\n",
     "    \"\"\"\n",
-    ")\n",
-    "df_lanes = thread.df()\n"
+    ")"
    ],
    "id": "212cc270316f80cd"
   },
@@ -432,7 +440,10 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "df_lanes",
+   "source": [
+    "df_lanes = thread.df()\n",
+    "df_lanes"
+   ],
    "id": "3d89f7ff53c4932a"
   },
   {
@@ -440,7 +451,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "thread.plot('heatmap of avg_delivery_days by seller-customer state pair')\n",
+   "source": "thread.plot('heatmap of avg_delivery_days by seller-customer state pair')",
    "id": "75bb95cc60517177"
   },
   {
@@ -448,7 +459,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "print(\"SQL for Lanes Analysis:\\n\", thread.code())\n",
+   "source": "print(\"SQL for Lanes Analysis:\\n\", thread.code())",
    "id": "6a38a3c891daffdd"
   },
   {
@@ -479,8 +490,7 @@
     "      - delivery_days vs revenue_per_order\n",
     "    write a short summary of the results, explain it in simple words.\n",
     "    \"\"\"\n",
-    ")\n",
-    "df_corr = thread.df()\n"
+    ")"
    ],
    "id": "e219103a2a29db5f"
   },
@@ -489,7 +499,10 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "df_corr",
+   "source": [
+    "df_corr = thread.df()\n",
+    "df_corr"
+   ],
    "id": "ab8f53a686a4e065"
   },
   {
@@ -497,7 +510,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "thread.plot()\n",
+   "source": "thread.plot()",
    "id": "27087243995d8acf"
   },
   {
@@ -538,8 +551,7 @@
     "      - Provide a summary table with ranks and key metrics.\n",
     "      - Generate narrative insights and brief recommendations (bulleted) suitable for a report.\n",
     "    \"\"\"\n",
-    ")\n",
-    "df_perf = thread.df()\n"
+    ")"
    ],
    "id": "35e680d980867941"
   },
@@ -548,7 +560,10 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "df_perf",
+   "source": [
+    "df_perf = thread.df()\n",
+    "df_perf"
+   ],
    "id": "9346517074b78cc6"
   },
   {
